Portico Sidenav: Fix alignment of text with logo
This vertically aligns the text "Zulip" with Zulip's logo
in Portico sidenav. Fixes #12140.

--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -3863,6 +3863,7 @@ nav ul li.active::after {
         height: 40px;
 
         font-size: 1.5rem;
+        line-height: 30px;
         text-align: right;
         color: hsl(0, 0%, 27%);
 
